--- a/判断是否滚动到底部.md
+++ b/判断是否滚动到底部.md
@@ -1,5 +1,5 @@
 	// 判断手机是否滑动到底部
-    scrollScreen () {
+    function scrollScreen () {
       // 文档高度
       function getDocumentTop () {
         var scrollTop = 0
